@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-28T16:29:59Z",
-  "count_outdated" : 2181,
-  "uniques_outdated" : 448,
-  "count" : 2223,
-  "uniques" : 474,
+  "timestamp" : "2022-06-29T01:51:38Z",
+  "count_outdated" : 2184,
+  "uniques_outdated" : 450,
+  "count" : 2225,
+  "uniques" : 475,
   "clones" : [
-    {
-      "timestamp": "2022-06-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-06-15T00:00:00Z",
       "count": 3,
