@@ -1,12 +1,7 @@
 {
-  "count": 42,
+  "count": 41,
   "uniques": 11,
   "clones": [
-    {
-      "timestamp": "2022-06-14T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-06-15T00:00:00Z",
       "count": 3,
